Add functionality to add a todo to the list

--- a/src/style.scss
+++ b/src/style.scss
@@ -51,6 +51,7 @@ body {
       li {
         display: flex;
         align-items: center;
+        padding: 10px 0px;
         .todo {
           flex: 0 0 20px;
           height: 20px;
