--- a/src/style.scss
+++ b/src/style.scss
@@ -21,14 +21,55 @@ button {
   cursor: pointer;
   margin: 0 3px;
   outline: 0;
+  &.add {
+    background-color: #1e90ff;
+    color: white;
+
+    &:hover {
+      background-color: #0077cc;
+    }
+  }
+  &.danger {
+    background: #e63946;
+    color: white;
+
+    &:hover {
+      background-color: #c62828;
+    }
+  }
+
+  &.primary {
+    background-color: #ffca3a;
+    color: white;
+
+    &:hover {
+      background-color: #e0b100;
+    }
+  }
+
+  &.success {
+    background: #06d6a0;
+    color: white;
+
+    &:hover {
+      background-color: #04b383;
+    }
+  }
 }
 
 body {
+  background: #f3f4f6;
   margin: 0;
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  h1 {
+    margin-bottom: 50px;
+    font-size: 36px;
+    letter-spacing: 3px;
+    text-align: center;
+  }
 
   .container {
     width: 500px;
@@ -54,6 +95,7 @@ body {
         display: flex;
         align-items: center;
         padding: 10px 0px;
+        cursor: pointer;
         .todo {
           flex: 0 0 20px;
           height: 20px;
@@ -68,6 +110,15 @@ body {
 
         p {
           flex: 1;
+          &:hover {
+            background: lightblue;
+            border-radius: 5px;
+            padding: 10px 0px 10px 5px;
+          }
+        }
+
+        .text-done {
+          text-decoration: line-through;
         }
 
         input {
